# learning_opengl

./: .gitignore  CMakeLists.txt  README.md  glad.c  learning_opengl_progress.docx  main.cpp
include/glad/: glad.h
